ebuilds = foo-1.0a_alpha1.ebuild \
	  foo-1.0a_beta1.ebuild \
	  foo-1.0a_pre1.ebuild \
	  foo-1.0a_rc1.ebuild \
	  foo-1.0a.ebuild \
	  foo-1.0a_p1.ebuild \
	  foo-1.0b.ebuild \
	  foo-1.0e.ebuild \
	  foo-1.2.ebuild \
	  foo-1.10.ebuild \
	  foo-1.10.20040629.ebuild \
	  foo-1.10.20050629.ebuild \
	  foo-1.10.20050629-r1.ebuild

EXTRA_DIST = $(ebuilds) metadata.xml
MAINTAINERCLEANFILES = Makefile.in *~
